--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    
     <div class="container">
         <h1>Daily Habit Tracker</h1>
         <ul>
@@ -32,7 +33,7 @@
                 </label>
             </li>
         </ul>
-        <p id="status">Habits Completed:0/3</p>
+        <p id="status">Habits <Completed:>co</Completed:>/3</p>
     </div>
 
 </body>
