--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habit tracker</title>
-    <link rel="stylesheet" href="C:\Users\Dell\Desktop\Health&wellness\CSS\style.css">
-    <script src="C:\Users\Dell\Desktop\Health&wellness\js\script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
